--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <!--Project 1 : Customize Here: update title, description, linnk, and image alt. Error handling includes fallback text.-->
         <div class="bg-gray-50 dark:bg-gray-700 p-6 rounded-lg shadow-md pulse-hover fade-in">
           <div class="card-image mb-4">
-            <img src="-----------" alt="Interactive web application screenshot showing a responsive dashboard with charts and user interface elements in a modern flat design" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';"/>
+            <img src="Assets/Images/Carb.Jpg" alt="Interactive web application screenshot showing a responsive dashboard with charts and user interface elements in a modern flat design" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';"/>
             <!--Fallback box-->
             <div class="h-64 bg-gradient-to-r from-primary to-accent flex items-center justify-center text-white hidden">Project Preview</div>
           </div>
@@ -133,4 +133,5 @@
     <!--Scripts-->
         <script src="Theme/Theme-Toggle.js"> </script>
     </body>
+
 </html>
