--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <a href="#about" class="text-secondary hover:text-primary transition">About</a>
                     <a href="#skills" class="text-secondary hover:text-primary transition">Skills</a>
                     <a href="#projects" class="text-secondary hover:text-primary transition">Projects</a>
-                    <!--<a href="#contact" class="text-secondary hover:text-primary transition">Contact</a>-->
+                    <a href="#contact" class="text-secondary hover:text-primary transition">Contact</a>
                 </nav>                
                 <button id="theme-toggle" class="bg-accent text-white px-4 py-2 rounded-full hover:bg-primary transition">Toggle Dark Mode</button>
                 <div class="md:hidden flex space-x-2">
@@ -25,7 +25,7 @@
                     <a href="#about" class="text-secondary hover:text-primary">A</a>
                     <a href="#skills" class="text-secondary hover:text-primary">S</a>
                     <a href="#projects" class="text-secondary hover:text-primary">P</a>
-                    <!--<a href="#contact" class="text-secondary hover:text-primary">C</a>-->
+                    <a href="#contact" class="text-secondary hover:text-primary">C</a>
                 </div>
             </div>
         </header>
@@ -34,7 +34,7 @@
             <div class="fade-in text-center">
                 <div class="mb-6">
                     <!-- Image: Professional headshot placeholder. CUSTOMIZE: Replace URL with your actual image, update alt text. Error handling: If fails, shows a fallback gradient. -->
-                    <img src="-----------" alt="Professional headshot of a young Web Developer casual attire standing confidently in a modern office with laptops and code backgrounds, smiling and looking directly at the camera" class="w-48 h-48 rounded-full mx-auto pulse-hover" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';" />
+                    <img src="Assets/Images/Me.jpg" alt="Professional headshot of a young Web Developer casual attire standing confidently in a modern office with laptops and code backgrounds, smiling and looking directly at the camera" class="w-48 h-48 rounded-full mx-auto pulse-hover" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';" />
                     <!-- Fallback initial circle -->
                     <div class="w-48 h-48 rounded-full mx-auto bg-gradient-to-br from-primary to-accent flex items-center justify-center text-3xl font-bold text-white hidden" style="margin-top: -12rem;">HK</div> 
                 </div>
@@ -131,7 +131,8 @@
     </footer>
         
     <!--Scripts-->
-        <script src="Theme/Theme-Toggle.js"> </script>
+        <script src="---"> </script>
     </body>
 
 </html>
+
