--- a/index.html
+++ b/index.html
@@ -131,8 +131,9 @@
     </footer>
         
     <!--Scripts-->
-        <script src="---"> </script>
+        <script src="Theme/Theme-Toggle.js"> </script>
     </body>
 
 </html>
+
 
