--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <!-- CUSTOMIZE HERE: Update title/description -->
                 <p class="text-xl text-secondary mb-8">Student</p> 
                 <!-- CUSTOMIZE HERE: Edit bio text -->
-                <p class="max-w-2xl mx-auto text-lg mb-8"><!--I create innovative web solutions, from responsive front-ends to robust back-ends.--> Explore my work and let's build something amazing together!</p> 
+                <p class="max-w-2xl mx-auto text-lg mb-8">Explore my work and let's build something amazing together!</p> 
                 <a href="#projects" class="bg-primary text-white px-8 py-3 rounded-full hover:bg-accent transition pulse-hover">View My Work</a>
             </div>
         </section>
@@ -135,5 +135,6 @@
     </body>
 
 </html>
+
 
 
